--- a/kdSolutions/desktopPage1/page2/index.css
+++ b/kdSolutions/desktopPage1/page2/index.css
@@ -813,5 +813,5 @@
   background-color: var(--container-page-bg);
   width: 100%;
   height: 1765px;
-  overflow: hidden;
+  overflow: scroll;
 }
